[project]
name = "yt-tools"
version = "0.1.0"
description = "YouTube video downloader and transcriber"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "parakeet-mlx>=0.5.0",
    "tqdm>=4.67.1",
    "yt-dlp>=2025.12.8",
]

[project.scripts]
yt = "yt_tools.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
